[package]
name = "rssh"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
xflags = "0.3.1"
xshell = "0.2.3"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort" # abort rather than inwind which removes extra unwinding code
lto = true # Enable link time optimization
strip = true # Automatically strip symbols from the binary (major impact)
opt-level = "z" # Optimize for size
codegen-units = 1 # Reduce parallel code generation units
